# movie_info

./: README.md  requirements.txt  setup.cfg
movie_info/: movie.py
