[metadata]
name = movie_info
maintainer = Samta Rangare
maintainer_email = samtarangare@gmail.com
keywords = 
	movies
include_package_data = True
test_suite = nose.collector

[files]
packages = 
        movie_info

[entry_points]
console_scripts = 
	movie_info = movie_info:movie.main

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
